/*
 * $Id: ChangeLog,v 1.1152 2013-09-18 21:37:40 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-09-18 18:36 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_altsyntax.ch
     ! RTE when no FIXEDCONTROLS clause nor DYNAMICCONTROLS clause
       is used in DEFINE/END GRID/BROWSE/XBROWSE.
     ! RTE when no FIXEDBLOCKS clause nor DYNAMICBLOCKS clause
       is used in DEFINE/END BROWSE/XBROWSE.
     + Added UNSYNCHRONIZED clause.

2013-09-12 20:08 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_graph.prg
     ! Pie chart wrongly displayed when one of the series values is 0.

2013-09-11 19:52 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     - Unneeded code.
     ! TGridControlComboBox display a blank cell when valuesource
       contains trailing blanks.

2013-09-10 19:51 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_altsyntax.ch
     + ON APPEND clause.
     + ONEDITCELL clause.
     + ON EDITCELL clause.
   * source/h_xbrowse.prg
     ! RTE at method TXBrowse:EditItem_B().

2013-09-09 22:42 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     * Previous entries corrected.
   * source/h_browse.prg
     - Method FixBlocks().
     - Method FixControls().
     ! Method FixBlocks() was not working as intended.
     ! Method FixControls() was not working as intended.
     ! SET BROWSEFIXEDCONTROLS not working as intended.
   * source/h_xbrowse.prg
     - Method FixControls().
     ! Method FixBlocks() was not working as intended.
     ! Method FixControls() was not working as intended.
     ! SET XBROWSEFIXEDCONTROLS not working as intended.
     % Some unnecessary conditions.
   * source/h_grid.prg
     ! Method FixControls() was not working as intended.
     ! SET GRIDFIXEDCONTROLS not working as intended.