@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.1152 2013-09-18 21:37:40 fyurisich Exp $
+ * $Id: ChangeLog,v 1.1153 2013-09-19 20:35:35 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-09-19 17:36 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   * source/h_msgbox.prg
+   * source/c_msgbox.c
+     + Added function MsgExclamationYesNo().
+       Thanks to Ricardo Sassy.
 
 2013-09-18 18:36 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    * include/i_altsyntax.ch
@@ -1512,7 +1518,7 @@
 2013-02-13 00:34 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
    * source/h_print.prg
      ! fixed problem in barcode print code128c when in the code are two 7  in sequence.
-     ( thanks to guillermo Luhning for reporting )
+     ( thanks to Guillermo Luhning for reporting )
 
 2012-11-26 14:13 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
    * source/h_tab.prg
